CDS-2519 Resolved button text alignment issue for mobile device.

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -319,6 +319,7 @@
 
   @media screen and (max-width: $screen-xs-min) {
     margin-top: 25px;
+    padding: 10px 0;
   }
 
   @media screen and (max-width: $screen-xs-max) {
